# Kurcovaya2

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
data/: vacansies.json
src/: external_api.py  filter.py  hh_class.py  saver_class.py
tests/: confest.py  test_external_api.py  test_filter.py  test_hh_class.py  test_saver_class.py
tests/test_data/: test_vacansies.json
